# tarotcli

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml  test_ai_basic.py  test_deck_basic.py  test_spread_basic.py
data/: README.md  tarot_cards_RW.jsonl
examples/: basic_usage.py  demo_ai_comparison.py  demo_ai_interpretation.py  demo_deck_operations.py  demo_spread_layouts.py
scripts/: clean_dataset.py
src/tarotcli/: __main__.py  ai.py  cli.py  config.py  deck.py  default.yaml  models.py  persistence.py  spreads.py  ui.py
tests/: conftest.py  test_ai.py  test_cli.py  test_config.py  test_deck.py  test_lookup.py  test_persistence.py  test_spreads.py
